--- a/template/index.html
+++ b/template/index.html
@@ -6,8 +6,7 @@
     <meta name="theme-color" content="#224A7F" />
     <link rel="manifest" href="/manifest.json" />
   </head>
-  <body>
+  <body style="margin: 0">
     <div id="mount"></div>
   </body>
 </html>
-
